[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/CommandPalettePopup/CommandPalettePopup.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
shadow_color = Color( 0.0901961, 0.0901961, 0.105882, 0.490196 )
shadow_size = 8

[node name="CommandPalettePopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HSplitContainer" parent="PanelContainer/Panel/MarginContainer"]
margin_right = 1900.0
margin_bottom = 1040.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/MarginContainer/Content"]
margin_right = 1900.0
margin_bottom = 1040.0
size_flags_horizontal = 3

[node name="SearchFilter" type="HBoxContainer" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 24.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/SearchFilter"]
margin_right = 1824.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/margin_right = 5

[node name="Filter" type="LineEdit" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/SearchFilter/MarginContainer"]
margin_right = 1819.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
clear_button_enabled = true
placeholder_text = "Type '?' to get help."
caret_blink = true
caret_blink_speed = 0.5

[node name="CopyButton" type="Button" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/SearchFilter"]
margin_left = 1828.0
margin_right = 1900.0
margin_bottom = 24.0
hint_tooltip = "Copies the file path to the clipboard if a file is selected. If the selection is a code snippet, the function gets copied."
text = "Copy Info"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer"]
margin_top = 28.0
margin_right = 1900.0
margin_bottom = 1005.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 1900.0
margin_bottom = 972.0

[node name="ItemList" type="ItemList" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/MarginContainer/HSplitContainer"]
margin_right = 1900.0
margin_bottom = 967.0
size_flags_horizontal = 3
max_columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightInfoBox" type="RichTextLabel" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/MarginContainer/HSplitContainer"]
visible = false
margin_left = 956.0
margin_right = 1900.0
margin_bottom = 1002.0
size_flags_horizontal = 3
bbcode_enabled = true

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer"]
margin_top = 1009.0
margin_right = 1900.0
margin_bottom = 1040.0

[node name="CurrentLabel" type="Label" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/HSplitContainer"]
margin_right = 948.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "
"
valign = 3
clip_text = true

[node name="LastLabel" type="Label" parent="PanelContainer/Panel/MarginContainer/Content/VBoxContainer/HSplitContainer"]
margin_left = 952.0
margin_right = 1900.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "
"
valign = 3
clip_text = true
